internal/gatewayapi/testdata/mergebackends-btp-backend-target-http1-ctp-client-scope.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    mergeBackends: {}
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      allowedListeners:
        namespaces:
          from: Same
      listeners:
        - name: http-1
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
listenerSets:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: ListenerSet
    metadata:
      namespace: default
      name: ls-1
    spec:
      parentRef:
        name: gateway-1
      listeners:
        - name: ls-http
          protocol: HTTP
          port: 8081
          allowedRoutes:
            namespaces:
              from: Same
clientTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: ctp-listenerset-http1
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          name: ls-1
      http1:
        preserveHeaderCase: true
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: btp-backend-http1
    spec:
      targetRefs:
        - group: ""
          kind: Service
          name: service-1
      mergeType: StrategicMerge
      http1:
        enableTrailers: true
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: http-route-1
    spec:
      parentRefs:
        - name: gateway-1
          sectionName: http-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: http-route-2
    spec:
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          name: ls-1
          sectionName: ls-http
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
